src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ABQ__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not a contact qualifies for anatomy boards.</description>
        <label>AB Q</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asst_Email__c</fullName>
        <label>Asst. Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hanky_Panky__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hanky-Panky</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImsNumber__c</fullName>
        <label>IMS Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobFunction__c</fullName>
        <label>Job Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyOpinionLeaderNotes__c</fullName>
        <label>KOL Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KeyOpinionLeader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Opinion Leader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the contact</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastVerified__c</fullName>
        <description>When was this contact last confirmed at this position in this company</description>
        <label>Last Verified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MainContactEmailAddress__c</fullName>
        <label>Main Contact Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MarketingMaterials__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Are they receiving marketing materials such as postcards and email blasts?</description>
        <inlineHelpText>Are they receiving marketing materials such as postcards and email blasts?</inlineHelpText>
        <label>Marketing Materials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedicalEducationNumber__c</fullName>
        <label>Medical Education Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI__c</fullName>
        <label>NPI #</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NoLongerThere__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Longer There</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PT_FT__c</fullName>
        <label>PT/FT</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PocNewsletter__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Are they receiving the POC NL each month?</description>
        <inlineHelpText>Are they receiving the POC NL each month?</inlineHelpText>
        <label>POC Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prescriber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prescriber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrimaryCare__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualification_Type__c</fullName>
        <description>In their list of qualifications, if they have at least one of the Speciality qualifications listed below, set their Qualification Type to &quot;Specialty&quot;
In their list of qualifications, if they don&apos;t have any Specialty qualifications listed below but have at least one PCP qualification, set their Qualification Type to &quot;PCP&quot;
In their list of qualifications, if they don&apos;t have any Specialty or PCP qualifications listed below but have at least one General Health qualification, set their Qualification Type to &quot;General Health&quot;
In their list of qualifications, if they don&apos;t have any Specialty, PCP or General Health qualifications listed below, set their Qualification Type to &quot;None&quot;.</description>
        <label>Qualification Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Health</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <picklist>
            <picklistValues>
                <fullName>Allergy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gastroenterology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infectious Disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obstetrics and Gynecology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rheumatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RelationshipLevel__c</fullName>
        <description>Diamond = VIP
Platinum = clients or strong advocates
Gold = engaged and interested in CM/DHN
Silver = aware of CM/DHN
Bronze = unknown/cold</description>
        <inlineHelpText>Diamond = VIP
Platinum = clients or strong advocates
Gold = engaged and interested in CM/DHN
Silver = aware of CM/DHN
Bronze = unknown/cold</inlineHelpText>
        <label>Relationship Level</label>
        <picklist>
            <picklistValues>
                <fullName>Diamond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse Practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OM Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receptionist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sarcom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Techlink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <label>Specialty</label>
        <picklist>
            <picklistValues>
                <fullName>Adolescent Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Medicine/Pediatrics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allergy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anesthesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APRN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audiologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bariatrics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bariatric Surgeon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Operating Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Psychiatry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chiropractic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRNP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dentistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dietician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endocrinology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epidemiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gastroenterology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geriatric Psychiatry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geriatrics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TechnicianCompetency__c</fullName>
        <label>Technician Competency</label>
        <picklist>
            <picklistValues>
                <fullName>Blue Chip Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware Mount Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware Config Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Termination - Detail in Contact notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requires Full Training</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <picklist>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accountant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admissions Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aesthetician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Area Practice Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARNP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant IT Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Office Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Maintanence Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Dental Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Medical Officer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isPcp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Pardot Scoring Categories. Indicates that new scores will soon be synced from Pardot for this contact.

Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this contact.

Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the search term.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether contact hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptdrive__Insights_URL__c</fullName>
        <label>Insights URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>skyplatform__Is_Personal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates that the Contact is flagged as personal for the purposes of determining the appropriate action when logging ShoreTel Sky call records.</description>
        <label>Is Personal</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>AllSSContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>ssvec</value>
        </filters>
        <label>All Steve&apos;s Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_Troy_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>tcol</value>
        </filters>
        <label>All Troy Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>CityContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.ADDRESS2_CITY</field>
            <operation>equals</operation>
            <value>philadelphia</value>
        </filters>
        <label>Contacts In City</label>
    </listViews>
    <listViews>
        <fullName>My_Hierarchy_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PARENT.NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>PARENT.NAME</field>
            <operation>notEqual</operation>
        </filters>
        <label>My Hierarchy Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Podiatry</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Specialty__c</field>
            <operation>equals</operation>
            <value>Podiatry</value>
        </filters>
        <label>Podiatry</label>
    </listViews>
    <recordTypes>
        <fullName>Ad_Sponsorship</fullName>
        <active>true</active>
        <label>Ad Sponsorship</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contractor</fullName>
        <active>true</active>
        <label>Contractor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <description>Used for employees and personal contacts</description>
        <label>Internal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Member_Practice</fullName>
        <active>true</active>
        <label>Member Practice</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Provider</fullName>
        <active>true</active>
        <description>Used for service providers which fulfill work orders.</description>
        <label>Service Provider</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NPI_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(
    NOT(ISNUMBER(NPI__c)),
    NOT(LEN(NPI__c) == 10)),
Prescriber__c)</errorConditionFormula>
        <errorDisplayField>NPI__c</errorDisplayField>
        <errorMessage>NPI number is required for qualified contacts, must be a number, and must have a total of 10 digits.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_number_length_greater_than_20</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(Phone) &gt; 20</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Phone numbers cannot exceed 20 characters. If your phone number has an extension in it, please move it to the extension field and try again.</errorMessage>
    </validationRules>
</CustomObject>